# delete-me

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  env.yml  mkdocs.yml  pyproject.toml  setup.cfg  versions.json
.github/workflows/: main.yml
docs/: index.md
latest/bar/: index.html
latest/foo/: index.html
run/: main.py
src/delete_me/: __init__.py  example.py
tests/: test_module.py
v0.1.4/: 404.html  index.html  sitemap.xml
v0.1.4/bar/: index.html
v0.1.4/foo/: index.html
v0.2.1/: 404.html  index.html  sitemap.xml
v0.2.1/bar/: index.html
v0.2.1/foo/: index.html
v0.2.2/: 404.html  index.html  sitemap.xml
v0.2.2/bar/: index.html
v0.2.2/foo/: index.html
v0.2.2/search/: search_index.json
