# Find out more about setup.cfg and what options are available here:
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = delete_me
description = Template with a complete set of files for starting a new Python Project.
long_description = file: README.md
author = Vojtech Micka
author_email = vojtech@nnaisense.com
keywords = python
license = MIT Licence
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Utilities
	Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
package_dir =
    =src
packages = find:
tests_require =
    delete_me[test]
install_requires =
    # This is where you specify all the python dependencies
    # used by your project/library.
    #
    # It's always good idea to pin the version you want to use.
    # Example dependency:
    # numpy==1.19
    # ---------------------------------------------------------

[options.package_data]
* = *.txt, *.md, *.rst

[options.packages.find]
where = src

[options.extras_require]
# Test dependencies
test =
    pytest
    pytest-cov
# Documentation dependencies
doc =
    mkdocs
    mkdocs-gen-files
    mkdocs-literate-nav
    mkdocs-material
    mkdocstrings[python-legacy]>=0.18
    mike

# Development dependencies
dev =
    black
    flake8
    isort
    pre-commit
    %(test)s
    %(doc)s

[mypy]
files=src/**/*.py, run/*.py, test/*.py
ignore_missing_imports=true

[flake8]
extend-exclude = src/delete_me/__version.py
max-line-length = 120
max-complexity = 18
select = B,C,E,F,W,T4,B9
ignore = E203, E266, E231, E501, W503, F403
